force-app/main/default/objects/AR_Receipt__c/fields/Alteration_Case__c.field-meta.xml
<CustomField>
    <fullName>Alteration_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alteration Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>