force-app/main/default/objects/AR_Receipt__c/fields/Amount_In_Words__c.field-meta.xml
<CustomField>
    <fullName>Amount_In_Words__c</fullName>
    <label>Amount In Words</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>