force-app/main/default/objects/AR_Receipt__c/fields/Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount__c</fullName>
    <label>Applied Amount</label>
    <summarizedField>AR_Applied_For__c.Applied_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>AR_Applied_For__c.Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>AR_Applied_For__c.Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>