force-app/main/default/objects/AR_Receipt__c/fields/Applied_Count__c.field-meta.xml
<CustomField>
    <fullName>Applied_Count__c</fullName>
    <label>Applied Count</label>
    <summaryFilterItems>
        <field>AR_Applied_For__c.Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>AR_Applied_For__c.Receipt__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>