force-app/main/default/objects/AR_Receipt__c/fields/AutoPaymentRef__c.field-meta.xml
<CustomField>
    <fullName>AutoPaymentRef__c</fullName>
    <formula>IF(CONTAINS(TEXT(Payment_Type__c), &apos;Cash&apos;), &apos;CASH&apos;,
IF(CONTAINS(TEXT(Payment_Type__c), &apos;Card&apos;), &apos;CARD&apos;,
IF(CONTAINS(TEXT(Payment_Type__c), &apos;Cheque&apos;), &apos;CHQ&apos;, 
IF(CONTAINS(TEXT(Payment_Type__c), &apos;Real Connect Payments&apos;), &apos;RCL&apos;, 
IF(CONTAINS(TEXT(Payment_Type__c), &apos;Payment Links&apos;), &apos;PL&apos;, &apos;&apos;) ) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AutoPaymentRef</label>
    <type>Text</type>
</CustomField>