force-app/main/default/objects/AR_Receipt__c/fields/Bank_Account_GL_Yardi_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_GL_Yardi_Code__c</fullName>
    <formula>Bank_Account__r.GL_Account__r.Yardi_GlCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Account GL Yardi Code</label>
    <type>Text</type>
</CustomField>