force-app/main/default/objects/AR_Receipt__c/fields/Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Type__c</fullName>
    <formula>TEXT(Bank_Account__r.Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Account Type</label>
    <type>Text</type>
</CustomField>