force-app/main/default/objects/AR_Receipt__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <label>Batch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>