force-app/main/default/objects/AR_Receipt__c/fields/Booking_Unit__c.field-meta.xml
<CustomField>
    <fullName>Booking_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Unit</label>
    <referenceTo>Booking_Unit__c</referenceTo>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>