force-app/main/default/objects/AR_Receipt__c/fields/Create_Force_FT_Not_Historical__c.field-meta.xml
<CustomField>
    <fullName>Create_Force_FT_Not_Historical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Force FT Not Historical</label>
    <type>Checkbox</type>
</CustomField>