force-app/main/default/objects/AR_Receipt__c/fields/Date_Label__c.field-meta.xml
<CustomField>
    <fullName>Date_Label__c</fullName>
    <formula>IF( CONTAINS(text(Payment_Type__c) , &quot;Cheque&quot;) , &quot;Cheque Date&quot;,&quot;Payment Date&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Label</label>
    <type>Text</type>
</CustomField>