force-app/main/default/objects/AR_Receipt__c/fields/Document_Received_From__c.field-meta.xml
<CustomField>
    <fullName>Document_Received_From__c</fullName>
    <formula>IF(!ISBLANK(Account__c),  Account_Name__c , Issued_To__r.Full_Legal_Name_of_Entity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Received From</label>
    <type>Text</type>
</CustomField>