force-app/main/default/objects/AR_Receipt__c/fields/Emirates_ID_Details__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID_Details__c</fullName>
    <label>Emirates ID Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>