force-app/main/default/objects/AR_Receipt__c/fields/Financial_Status__c.field-meta.xml
<CustomField>
    <fullName>Financial_Status__c</fullName>
    <label>Financial Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UnReconciled</fullName>
                <default>true</default>
                <label>UnReconciled</label>
            </value>
            <value>
                <fullName>Reconciled</fullName>
            </value>
            <value>
                <fullName>Reversed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>