force-app/main/default/objects/AR_Receipt__c/fields/Intercompany__c.field-meta.xml
<CustomField>
    <fullName>Intercompany__c</fullName>
    <formula>IF(
    Inventory__r.RecordType.Name = &apos;Plot(Land)&apos;,
    IF(
        Bank_Account__r.Legal_Entity__c = Inventory__r.Project_Inv__r.Legal_Entity_CL__c,
        false,
        true
    ),
    IF(
        Inventory__r.RecordType.Name = &apos;Unit&apos;,
        IF(
             Bank_Account__r.Legal_Entity__c  = Inventory__r.Property_Inv__r.Project_Inv__r.Legal_Entity_CL__c ,
            false,
            true
        ),
         IF(Bank_Account__r.Legal_Entity__c  =  Issued_To__c , false, true) 
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intercompany</label>
    <type>Checkbox</type>
</CustomField>