force-app/main/default/objects/AR_Receipt__c/fields/Is_Cheque__c.field-meta.xml
<CustomField>
    <fullName>Is_Cheque__c</fullName>
    <formula>IF(CONTAINS( text(Payment_Type__c) ,&apos;Cheque&apos;) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Cheque</label>
    <type>Checkbox</type>
</CustomField>