force-app/main/default/objects/AR_Receipt__c/fields/Is_Cross_Charge__c.field-meta.xml
<CustomField>
    <fullName>Is_Cross_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cross Charge</label>
    <type>Checkbox</type>
</CustomField>