force-app/main/default/objects/AR_Receipt__c/fields/Is_Dummy_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Is_Dummy_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dummy Receipt</label>
    <type>Checkbox</type>
</CustomField>