force-app/main/default/objects/AR_Receipt__c/fields/Is_Entity_Match__c.field-meta.xml
<CustomField>
    <fullName>Is_Entity_Match__c</fullName>
    <formula>IF( Issued_To__c ==  Inventory__r.Project_Inv__r.Legal_Entity_CL__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Entity Match</label>
    <type>Checkbox</type>
</CustomField>