force-app/main/default/objects/AR_Receipt__c/fields/Is_Kiosk_Source__c.field-meta.xml
<CustomField>
    <fullName>Is_Kiosk_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFAR-153 : Temporary fix for Vipin&apos;s Kiosk usage report : If the source is Kiosk, this is true.</description>
    <label>Is Kiosk Source?</label>
    <type>Checkbox</type>
</CustomField>