force-app/main/default/objects/AR_Receipt__c/fields/Is_Legal_Match__c.field-meta.xml
<CustomField>
    <fullName>Is_Legal_Match__c</fullName>
    <formula>Issued_To__c = Inventory__r.Project_Inv__r.Legal_Entity_CL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Legal Match</label>
    <type>Checkbox</type>
</CustomField>