force-app/main/default/objects/AR_Receipt__c/fields/Issued_To__c.field-meta.xml
<CustomField>
    <fullName>Issued_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issued To</label>
    <referenceTo>AR_Legal_Entity__c</referenceTo>
    <relationshipName>Receipts1</relationshipName>
    <type>Lookup</type>
</CustomField>