force-app/main/default/objects/AR_Receipt__c/fields/Joint_Owners__c.field-meta.xml
<CustomField>
    <fullName>Joint_Owners__c</fullName>
    <label>Joint Owners</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>