force-app/main/default/objects/AR_Receipt__c/fields/LPF_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>LPF_Invoice_Amount__c</fullName>
    <label>LPF Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>