force-app/main/default/objects/AR_Receipt__c/fields/LPF_Invoice_Days__c.field-meta.xml
<CustomField>
    <fullName>LPF_Invoice_Days__c</fullName>
    <label>LPF Invoice Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>