force-app/main/default/objects/AR_Receipt__c/fields/LPFDays__c.field-meta.xml
<CustomField>
    <fullName>LPFDays__c</fullName>
    <formula>LPF_Invoice_Days__c * 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LPFDays</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>