force-app/main/default/objects/AR_Receipt__c/fields/Notes_Receivables_GL__c.field-meta.xml
<CustomField>
    <fullName>Notes_Receivables_GL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notes Receivables GL</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipLabel>Receipt</relationshipLabel>
    <relationshipName>Receipt</relationshipName>
    <type>Lookup</type>
</CustomField>