force-app/main/default/objects/AR_Receipt__c/fields/NSF_Flag__c.field-meta.xml
<CustomField>
    <fullName>NSF_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NSF Flag</label>
    <type>Checkbox</type>
</CustomField>