force-app/main/default/objects/AR_Receipt__c/fields/Oracle_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Project_Name__c</fullName>
    <label>Oracle Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>