force-app/main/default/objects/AR_Receipt__c/fields/Parent_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Parent_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Receipt</label>
    <referenceTo>AR_Receipt__c</referenceTo>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>