force-app/main/default/objects/AR_Receipt__c/fields/Payment_Group__c.field-meta.xml
<CustomField>
    <fullName>Payment_Group__c</fullName>
    <formula>IF(CONTAINS(TEXT(Payment_Type__c), &apos;Cash&apos;),  
&apos;CASH&apos;, 
IF(CONTAINS(TEXT(Payment_Type__c), &apos;Cheque&apos;),
&apos;CHEQUES AND MANAGERS CHEQUE&apos;,
IF(CONTAINS(TEXT(Payment_Type__c), &apos;Card&apos;),
 &apos;CARD&apos;,
 &apos;OTHERS&apos;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Group</label>
    <type>Text</type>
</CustomField>