force-app/main/default/objects/AR_Receipt__c/fields/Payment_Source__c.field-meta.xml
<CustomField>
    <fullName>Payment_Source__c</fullName>
    <label>Payment Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>