force-app/main/default/objects/AR_Receipt__c/fields/Post_Dated_Cheque__c.field-meta.xml
<CustomField>
    <fullName>Post_Dated_Cheque__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Dated Cheque</label>
    <referenceTo>AR_Post_Dated_Cheque__c</referenceTo>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>