force-app/main/default/objects/AR_Receipt__c/fields/Procedure_Number__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Number__c</fullName>
    <label>Procedure Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>