force-app/main/default/objects/AR_Receipt__c/fields/PropertyCode__c.field-meta.xml
<CustomField>
    <fullName>PropertyCode__c</fullName>
    <formula>Inventory__r.Property_Inv__r.PropertyCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PropertyCode</label>
    <type>Text</type>
</CustomField>