force-app/main/default/objects/AR_Receipt__c/fields/Real_Connect__c.field-meta.xml
<CustomField>
    <fullName>Real_Connect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Real Connect</label>
    <type>Checkbox</type>
</CustomField>