force-app/main/default/objects/AR_Receipt__c/fields/Receipt_Code__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Code__c</fullName>
    <externalId>true</externalId>
    <label>Receipt Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>