force-app/main/default/objects/AR_Receipt__c/fields/Receipt_Document_Generated__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Document_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt Document Generated</label>
    <type>Checkbox</type>
</CustomField>