force-app/main/default/objects/AR_Receipt__c/fields/Receipt_ID__c.field-meta.xml
<CustomField>
    <fullName>Receipt_ID__c</fullName>
    <displayFormat>RC-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Receipt Number</label>
    <type>AutoNumber</type>
</CustomField>