force-app/main/default/objects/AR_Receipt__c/fields/Receipt_Reversal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Reversal_Notes__c</fullName>
    <label>Receipt Reversal Notes</label>
    <type>TextArea</type>
</CustomField>