force-app/main/default/objects/AR_Receipt__c/fields/Receipt_Reversal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Reversal_Reason__c</fullName>
    <label>Receipt Reversal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate Receipt</fullName>
            </value>
            <value>
                <fullName>Wrong Amount</fullName>
            </value>
            <value>
                <fullName>Posted to Wrong Bank Account</fullName>
            </value>
            <value>
                <fullName>Receipt Error Correction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>