force-app/main/default/objects/AR_Receipt__c/fields/Receipt_Transfered__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Transfered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt Transfered</label>
    <type>Checkbox</type>
</CustomField>