force-app/main/default/objects/AR_Receipt__c/fields/Reference_No_Label__c.field-meta.xml
<CustomField>
    <fullName>Reference_No_Label__c</fullName>
    <formula>IF( CONTAINS(text(Payment_Type__c) , &quot;Cheque&quot;) , &quot;Cheque No&quot;,&quot;Reference No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference No. Label</label>
    <type>Text</type>
</CustomField>