force-app/main/default/objects/AR_Receipt__c/fields/Resale_Applied__c.field-meta.xml
<CustomField>
    <fullName>Resale_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resale Applied</label>
    <type>Checkbox</type>
</CustomField>