force-app/main/default/objects/AR_Receipt__c/fields/Reservation_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reservation Receipt</label>
    <type>Checkbox</type>
</CustomField>