force-app/main/default/objects/AR_Receipt__c/fields/Reservation_Receipt_Type__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Receipt_Type__c</fullName>
    <label>Reservation Receipt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>in01</fullName>
            </value>
            <value>
                <fullName>in02</fullName>
            </value>
            <value>
                <fullName>DLD Registration</fullName>
            </value>
            <value>
                <fullName>Admin Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>