force-app/main/default/objects/AR_Receipt__c/fields/Retained_Id__c.field-meta.xml
<CustomField>
    <fullName>Retained_Id__c</fullName>
    <externalId>true</externalId>
    <label>Retained Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>