force-app/main/default/objects/AR_Receipt__c/fields/Return_Charged__c.field-meta.xml
<CustomField>
    <fullName>Return_Charged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Charged</label>
    <type>Checkbox</type>
</CustomField>