force-app/main/default/objects/AR_Receipt__c/fields/Reversal_Date__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Date__c</fullName>
    <label>Reversal Date</label>
    <type>Date</type>
</CustomField>