force-app/main/default/objects/AR_Receipt__c/fields/Reversal_Supply_Date__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Supply_Date__c</fullName>
    <label>Reversal Supply Date</label>
    <type>Date</type>
</CustomField>