force-app/main/default/objects/AR_Receipt__c/fields/Reverse_Type__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Type__c</fullName>
    <label>Reverse Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Return Cheque</fullName>
            </value>
            <value>
                <fullName>Un Processed Return Cheque</fullName>
            </value>
            <value>
                <fullName>Error Correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>