force-app/main/default/objects/AR_Receipt__c/fields/Run_Historical_Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Run_Historical_Charge_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Historical Charge Type</label>
    <type>Checkbox</type>
</CustomField>