force-app/main/default/objects/AR_Receipt__c/fields/Run_Historical_Unit_Payments__c.field-meta.xml
<CustomField>
    <fullName>Run_Historical_Unit_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Historical Unit Payments</label>
    <type>Checkbox</type>
</CustomField>