force-app/main/default/objects/AR_Receipt__c/fields/Send_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Send_Receipt__c</fullName>
    <label>Send Receipt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>