force-app/main/default/objects/AR_Receipt__c/fields/SoftDeleted__c.field-meta.xml
<CustomField>
    <fullName>SoftDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Soft Deleted</label>
    <type>Checkbox</type>
</CustomField>